--- a/main.html
+++ b/main.html
@@ -10,13 +10,13 @@
     <table border="1">
         <tr>
             <td>
-                <table border="1" width="100%">
+                <table border="1">
                     <tr>
-                        <th colspan="2" align="center">Nested Table 2</th>
+                        <th colspan="2">Nested Table 2</th>
                     </tr>
                     <tr>
-                        <td>Coloumn 1</td>
-                        <td>Coloumn 2</td>
+                        <th>Column 1</th>
+                        <th>Column 2</th>
                     </tr>
                     <tr>
                         <td>abc</td>
@@ -26,9 +26,9 @@
             </td>
 
             <td>
-                <table border="1" width="100%">
+                <table border="1">
                     <tr>
-                        <th align="center">Nested Table 1</th>
+                        <th>Nested Table 1</th>
                     </tr>
                     <tr>
                         <td>
@@ -45,10 +45,8 @@
 
         <tr>
             <td>
-                <table border="1" width="100%">
-                    <tr>
-                        <th colspan="2" align="center">Nested Table 3</th>
-                    </tr>
+                <table border="1">
+                    <tr><th colspan="2">Nested Table 3</th></tr>
                     <tr>
                         <td><a href="#">Nested Table</a></td>
                         <td>Demo Continued</td>
@@ -57,13 +55,9 @@
             </td>
 
             <td>
-                <table border="1" width="100%">
-                    <tr>
-                        <th colspan="2" align="center">Nested Table 4</th>
-                    </tr>
-                    <tr>
-                        <td style="background-color:black; color: #fff;" align="center">HTML</td>
-                    </tr>
+                <table border="1">
+                    <tr><th>Nested Table 4</th></tr>
+                    <tr><td style="color: white;" bgcolor="black">HTML</td></tr>
                 </table>
             </td>
         </tr>
